--- a/mrt-demo-project/package.json
+++ b/mrt-demo-project/package.json
@@ -14,8 +14,11 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.10.2",
+    "date-fns": "^4.1.0",
     "material-react-table": "^3.2.1",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
