--- a/mrt-demo-project/package.json
+++ b/mrt-demo-project/package.json
@@ -16,13 +16,20 @@
     "@mui/material": "^7.3.1",
     "@mui/x-date-pickers": "^8.10.2",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "material-react-table": "^3.2.1",
     "react": "^19.1.1",
     "react-datepicker": "^8.7.0",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/jspdf": "^1.3.3",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
