--- a/mrt-demo-project/package.json
+++ b/mrt-demo-project/package.json
@@ -18,12 +18,15 @@
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "material-react-table": "^3.2.1",
     "react": "^19.1.1",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
+    "react-i18next": "^15.7.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
