--- a/mrt-demo-project/package.json
+++ b/mrt-demo-project/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.2",
+    "react-router-dom": "^7.8.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
