--- a/mrt-demo-project/package.json
+++ b/mrt-demo-project/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@mui/x-date-pickers": "^8.10.2",
+    "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
